--- a/bin/install
+++ b/bin/install
@@ -10,6 +10,8 @@ shopt -s inherit_errexit 2>/dev/null || true
 function gh_curl() {
 	if [[ -n ${GITHUB_TOKEN-} ]]; then
 		curl -fLsS -H "Authorization: token ${GITHUB_TOKEN}" "$@"
+	elif [[ -n ${GITHUB_API_TOKEN-} ]]; then
+		curl -fLsS -H "Authorization: token ${GITHUB_API_TOKEN}" "$@"
 	else
 		curl -fLsS "$@"
 	fi
